# micromachines_cpp

./: CMakeLists.txt  README.md
assets/pistas/: 1.json
config/: client_settings.json  server_settings.json
extras/supresiones_valgrind/: minimal.supp
generacion_pistas/: generacion_pistas.py
includes/cliente/: Cliente.h
includes/cliente/GUI/: Animacion.h  AnimacionFactory.h  Area.h  Boton.h  Camara.h  EventoGUIHandler.h  HiloDibujador.h  ObjetoDinamico.h  Pista.h  Renderizador.h  Sonido.h  Texto.h  Textura.h  Ventana.h
includes/cliente/GUI/escenas/: Escena.h  EscenaLobby.h  EscenaMenu.h  EscenaPartida.h  EscenaPodio.h  EscenaSala.h
includes/cliente/GUI/eventos/: EventoGUI.h  EventoGUIClick.h  EventoGUIKeyDown.h  EventoGUIKeyUp.h
includes/cliente/excepciones/: SDLException.h
includes/cliente/grabador/: HiloGrabador.h
includes/cliente/grabador/ffmpeg/: codec.h  frame.h  output_format.h  output_stream.h  output_video.h  video_codec.h
includes/cliente/jugadores/: Computadora.h  Jugador.h
includes/cliente/red/: SocketTCPCliente.h
includes/cliente/utils/: ConfigCliente.h  DobleBuffer.h
includes/common/: Cola.h  ColaBloqueante.h  ColaNoProtegida.h  ColaProtegida.h  Constantes.h  Conversor.h  Cronometro.h  EnviadorEventos.h  Handler.h  Hilo.h  RecibidorEventos.h  Tile.h
includes/common/eventos/: Evento.h  EventoAcelerar.h  EventoAparecioConsumible.h  EventoBarroPisado.h  EventoChoque.h  EventoCrearPartida.h  EventoDejarDeDoblarDerecha.h  EventoDejarDeDoblarIzquierda.h  EventoDejarDeFrenar.h  EventoDesacelerar.h  EventoDesaparecioConsumible.h  EventoDesconexion.h  EventoDoblarDerecha.h  EventoDoblarIzquierda.h  EventoExplosion.h  EventoFactory.h  EventoFinBarro.h  EventoFinCarrera.h  EventoFrenada.h  EventoFrenar.h  EventoIniciarPartida.h  EventoPartidaCreada.h  EventoPartidaIniciada.h  EventoSnapshot.h  EventoSnapshotLobby.h  EventoSnapshotSala.h  EventoUnirseAPartida.h  EventoUnirseASala.h
includes/common/excepciones/: EventoDesconocidoError.h
includes/common/red/: Protocolo.h  SocketTCP.h
includes/servidor/: CoordinadorPartidas.h  DistribuidorEventos.h  HiloAceptador.h  Jugador.h  Partida.h  SalaDeEspera.h  Servidor.h
includes/servidor/modelo/: Colisionable.h  Identificable.h  Mundo.h
includes/servidor/modelo/entidades/: Aceite.h  Barro.h  Boost.h  CajaVida.h  Modificador.h  Piedra.h  Vehiculo.h
includes/servidor/modelo/entidades/carrera/: Carrera.h  Checkpoint.h
includes/servidor/modelo/fisicas/: B2DVehiculo.h  ContactListener.h  Fisicas.h
includes/servidor/modelo/fisicas/transformaciones/: Quitar.h  Reubicar.h  Transformacion.h
includes/servidor/modelo/movimiento/: Posicion.h
includes/servidor/modelo/superficies/: Superficie.h  SuperficieArena.h  SuperficieFactory.h  SuperficiePista.h  SuperficieTierra.h
includes/servidor/red/: SocketTCPServidor.h
includes/servidor/utils/: ConfigServidor.h
src/: CMakeLists.txt
src/cliente/: CMakeLists.txt  Cliente.cpp  main_cliente.cpp
src/cliente/GUI/: Animacion.cpp  AnimacionFactory.cpp  Area.cpp  Boton.cpp  Camara.cpp  HiloDibujador.cpp  ObjetoDinamico.cpp  Pista.cpp  Renderizador.cpp  Sonido.cpp  Texto.cpp  Textura.cpp  Ventana.cpp
src/cliente/GUI/escenas/: Escena.cpp  EscenaLobby.cpp  EscenaMenu.cpp  EscenaPartida.cpp  EscenaPodio.cpp  EscenaSala.cpp
src/cliente/GUI/eventos/: EventoGUIClick.cpp  EventoGUIKeyDown.cpp  EventoGUIKeyUp.cpp
src/cliente/excepciones/: SDLException.cpp
src/cliente/grabador/: HiloGrabador.cpp
src/cliente/grabador/ffmpeg/: codec.cpp  frame.cpp  output_format.cpp  output_stream.cpp  output_video.cpp  video_codec.cpp
src/cliente/jugadores/: Computadora.cpp  Jugador.cpp
src/cliente/red/: SocketTCPCliente.cpp
src/cliente/utils/: ConfigCliente.cpp
src/common/: Conversor.cpp  Cronometro.cpp  EnviadorEventos.cpp  Handler.cpp  Hilo.cpp  RecibidorEventos.cpp  Tile.cpp
src/common/eventos/: Evento.cpp  EventoAcelerar.cpp  EventoAparecioConsumible.cpp  EventoBarroPisado.cpp  EventoChoque.cpp  EventoCrearPartida.cpp  EventoDejarDeDoblarDerecha.cpp  EventoDejarDeDoblarIzquierda.cpp  EventoDejarDeFrenar.cpp  EventoDesacelerar.cpp  EventoDesaparecioConsumible.cpp  EventoDesconexion.cpp  EventoDoblarDerecha.cpp  EventoDoblarIzquierda.cpp  EventoExplosion.cpp  EventoFactory.cpp  EventoFinBarro.cpp  EventoFinCarrera.cpp  EventoFrenada.cpp  EventoFrenar.cpp  EventoIniciarPartida.cpp  EventoPartidaCreada.cpp  EventoPartidaIniciada.cpp  EventoSnapshot.cpp  EventoSnapshotLobby.cpp  EventoSnapshotSala.cpp  EventoUnirseAPartida.cpp  EventoUnirseASala.cpp
src/common/excepciones/: EventoDesconocidoError.cpp
src/common/red/: Protocolo.cpp  SocketTCP.cpp
src/servidor/: CMakeLists.txt  CoordinadorPartidas.cpp  DistribuidorEventos.cpp  HiloAceptador.cpp  Jugador.cpp  Partida.cpp  SalaDeEspera.cpp  Servidor.cpp  main_servidor.cpp
src/servidor/modelo/: Colisionable.cpp  Identificable.cpp  Mundo.cpp
src/servidor/modelo/entidades/: Aceite.cpp  Barro.cpp  Boost.cpp  CajaVida.cpp  Modificador.cpp  Piedra.cpp  Vehiculo.cpp
src/servidor/modelo/entidades/carrera/: Carrera.cpp  Checkpoint.cpp
src/servidor/modelo/fisicas/: B2DVehiculo.cpp  ContactListener.cpp  Fisicas.cpp
src/servidor/modelo/fisicas/transformaciones/: Quitar.cpp  Reubicar.cpp  Transformacion.cpp
src/servidor/modelo/movimiento/: Posicion.cpp
src/servidor/modelo/superficies/: SuperficieArena.cpp  SuperficieFactory.cpp  SuperficiePista.cpp  SuperficieTierra.cpp
src/servidor/red/: SocketTCPServidor.cpp
src/servidor/utils/: ConfigServidor.cpp
test/: event_sender.py  secuencia_checkpoints.py
